# gputrace-rs

./: .gitignore  Cargo.toml  README.md  gputrace.entitlements
.handoffs/: 2026-05-05-gpu-cost-reality-check.md
crates/agxps-noxcode-sys/: Cargo.toml
crates/agxps-noxcode-sys/examples/: decode_profiling.rs
crates/agxps-noxcode-sys/src/: lib.rs  offsets.rs
crates/agxps-sys/: Cargo.toml
crates/agxps-sys/examples/: decode_profiling.rs  probe_instruction_trace.rs  probe_kick_stats.rs  probe_obfuscation.rs  probe_rde_importer.rs  probe_timing_analyzer.rs  probe_timing_trace_join.rs
crates/agxps-sys/src/: lib.rs
crates/xtask/src/: main.rs
docs/: AGENT_GUIDE.md  AGXPS_API.md  LLM_USAGE.md  PROFILE_WORKFLOW.md  REPLAY_BACKEND.md
src/: analyze_usage.rs  apicalls.rs  buffer_timeline.rs  buffers.rs  clear_buffers.rs  cli.rs  commands.rs  correlate.rs  counter.rs  counter_export.rs  counter_names.rs  dump.rs  error.rs  fences.rs  graphing.rs  insights.rs  lib.rs  main.rs  markdown.rs  mtlb.rs  profiler.rs  replay_service.rs  report.rs  shaders.rs  synth_bench.rs  timeline.rs  timing.rs  xcode_command_costs.rs  xcode_cost_scan.rs  xcode_counters.rs  xcode_mio.rs
src/analysis/: mod.rs
src/automation/: ax.rs  mod.rs
src/diff/: mod.rs
src/trace/: mod.rs  mtsp.rs
tests/: cli_contract.rs  counter_export_fixture_validation.rs  diag_fused_rmsnorm.py  eval_attribution.py  inspect_mio.py  probe_routing.py
