[package]
name = "gputrace-rs"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [".", "crates/xtask", "crates/agxps-sys", "crates/agxps-noxcode-sys"]

[[bin]]
name = "gputrace"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
flate2 = "1.1"
memchr = "2.7"
plist = "1.8"
pulldown-cmark = "0.13"
regex = "1.12"
rquickjs = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
agxps-sys = { path = "crates/agxps-sys" }
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-core-foundation = "0.3"
objc2-foundation = "0.3"
objc2-metal = "0.3.2"

[dev-dependencies]
insta = "1.43"
similar = "2.7"
tempfile = "3.20"
